--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,14 @@
-// Import your less files here:
+@import "variables.less";
+@import "mixins.less";
 
+// Global styles
+@import "reset.less";
+@import "global.less";
+
+// Components
+@import "navigation.less";
+@import "footer.less";
+@import "home-page.less";
 
 
 
