--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,7 +9,7 @@
 
         h1 {
             text-align: center;
-            margin: 15px 0;
+            margin-top: 15px;
             color: @header-font-color;
         }
 
@@ -17,7 +17,7 @@
             display: flex;
             justify-content: center;
             width: 100%;
-            margin-bottom: 10px;
+            margin: 15px 0;
 
             a:not(:last-child) {
                 margin-right: 1.8%;
