--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,10 @@
 
   .intro {
 
+    img {
+      border-radius: 5px;
+    }
+
     h2 {
       padding: 15px;
     }
@@ -11,7 +15,7 @@
     p {
       padding:0 15px;
     }
-  
+
   }
 
   .space-images {
@@ -58,13 +62,14 @@
       }
 
       .btn {
+        .primary-btn(100px, 35px, @porcelain, @header-font-color);
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+
       img {
         width: 100%;
         height: auto;
