--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,26 +1,23 @@
 .navigation {
     background: @nav-bg;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .center();
 
     .navigation-items {
         width: 100%;
 
         h1 {
             text-align: center;
-            margin-top: 15px;
+            margin: 15px 0;
             color: @header-font-color;
         }
 
         nav {
-            display: flex;
-            justify-content: center;
+            .center();
             width: 100%;
-            margin: 15px 0;
+            margin: 10px 0;
 
             a:not(:last-child) {
-                margin-right: 1.8%;
+                margin-right: 1.6%;
             }
         }
     }
