created mobile breakpoint, completed mobile design

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,6 +18,10 @@
 
             a:not(:last-child) {
                 margin-right: 1.6%;
+
+                @media @mobile {
+                    margin-right: 6%;
+                }
             }
         }
     }
