--- a/css/index.css
+++ b/css/index.css
@@ -194,6 +194,11 @@ a {
 .navigation .navigation-items nav a:not(:last-child) {
   margin-right: 1.6%;
 }
+@media (max-width: 500px) {
+  .navigation .navigation-items nav a:not(:last-child) {
+    margin-right: 6%;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -206,6 +211,11 @@ footer {
 }
 .home .intro img {
   border-radius: 5px;
+}
+@media (max-width: 500px) {
+  .home .intro img {
+    width: 100%;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -224,6 +234,20 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    margin: 20px 5%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -240,8 +264,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    margin-top: 20px;
+    flex-direction: column;
+    padding: 20px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -267,9 +304,36 @@ footer {
   background: #F6F7F8;
   color: #23293B;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    color: #F6F7F8;
+    background: #23293B;
+    width: 100%;
+    height: 70px;
+    line-height: 70px;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 1.8rem;
+    font-weight: 500;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .home .walk .walk-text .btn:hover {
+    border: solid 1px #23293B;
+    background: #F6F7F8;
+    color: #23293B;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    order: -1;
+    width: 100%;
+    margin: 0;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
