--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,10 @@
 
     img {
       border-radius: 5px;
+
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     h2 {
@@ -28,6 +32,21 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile {
+        width: 100%;
+        margin: 20px 5%;
+      }
+    }
+
+    @media @mobile {
+        .sky {
+            display: none;
+        }
+
+        .launch {
+            display: none;
+        }
     }
   }
 
@@ -50,8 +69,19 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+        margin-top: 20px;
+        flex-direction: column;
+        padding: 20px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @mobile {
+        width: 100%;
+        margin-top: 20px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -63,12 +93,22 @@
 
       .btn {
         .primary-btn(100px, 35px, @porcelain, @header-font-color);
+
+        @media @mobile {
+            .primary-btn(100%, 70px, @porcelain, @header-font-color)
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @mobile {
+        order: -1;
+        width: 100%;
+        margin: 0;
+      }
 
       img {
         width: 100%;
