--- a/less/home-page.less
+++ b/less/home-page.less
@@ -40,11 +40,7 @@
     }
 
     @media @mobile {
-        .sky {
-            display: none;
-        }
-
-        .launch {
+        .sky, .launch {
             display: none;
         }
     }
