--- a/less/blog-page.less
+++ b/less/blog-page.less
@@ -3,7 +3,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 50px auto;
 
     .card {
         max-height: 440px;
@@ -38,7 +37,41 @@
             margin: 20px;
             border: none;
             outline: none;
-            .primary-btn(100px, 45px, @porcelain, @header-font-color)
+            .primary-btn(100px, 45px, @porcelain, @header-font-color);
         }
+    }
+
+    .magazine {
+        .top-spacing();
+        text-align: center;
+
+        h3 {
+            margin-bottom: 10px;
+        }
+
+        .magazine-form {
+            display: flex;
+
+            input {
+                width: 300px;
+                height: 50px;
+                border-radius: 5px;
+                border: 1px solid @header-font-color;
+                padding: 10px;
+            }
+
+            button {
+                border: none;
+                outline: none;
+                .primary-btn(100px, 50px, @porcelain, @header-font-color);
+                margin-left: 10px;
+            }
+        }
+
+    }
+
+    footer {
+        .top-spacing();
+        width: 100%;
     }
 }
