--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,8 @@
 .navigation {
+    position: fixed;
+    width: 100%;
     background: @nav-bg;
+    opacity: 0.95;
     .center();
 
     .navigation-items {
