created scale mixin and scale-time mixin

--- a/less/blog-page.less
+++ b/less/blog-page.less
@@ -13,6 +13,11 @@
         background: @nav-bg;
         border-radius: 5px;
 
+        .scale-time(0.3s);
+        &:hover {
+            .scale(1.05, ease-in-out);
+        }
+
         img {
             max-height: 180px;
             max-width: 400px;
