--- a/css/index.css
+++ b/css/index.css
@@ -237,6 +237,11 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+  transition: 0.3s;
+}
+.home .space-images img:hover {
+  transform: scale(1.1);
+  transition-timing-function: ease-in-out;
 }
 @media (max-width: 500px) {
   .home .space-images img {
@@ -341,6 +346,11 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+  transition: 0.3s;
+}
+.home .walk .walk-img img:hover {
+  transform: scale(1.1);
+  transition-timing-function: ease-in-out;
 }
 .blog {
   display: flex;
@@ -356,6 +366,11 @@ footer {
   margin: 10px;
   background: #F6F6F6;
   border-radius: 5px;
+  transition: 0.3s;
+}
+.blog .card:hover {
+  transform: scale(1.05);
+  transition-timing-function: ease-in-out;
 }
 .blog .card img {
   max-height: 180px;
