finished project and all stretches

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,7 +71,7 @@
     display: flex;
     justify-content: center;
 
-    @media @mobile {
+    @media @mobile, @tablet {
         margin-top: 20px;
         flex-direction: column;
         padding: 20px;
@@ -80,7 +80,7 @@
     .walk-text {
       width: 50%;
 
-      @media @mobile {
+      @media @mobile, @tablet {
         width: 100%;
         margin-top: 20px;
       }
@@ -106,7 +106,7 @@
       width: 46%;
       margin-left: 4%;
 
-      @media @mobile {
+      @media @mobile, @tablet {
         order: -1;
         width: 100%;
         margin: 0;
