--- a/css/index.css
+++ b/css/index.css
@@ -271,7 +271,7 @@ footer {
   display: flex;
   justify-content: center;
 }
-@media (max-width: 500px) {
+@media (max-width: 500px), (max-width: 800px) {
   .home .walk {
     margin-top: 20px;
     flex-direction: column;
@@ -281,7 +281,7 @@ footer {
 .home .walk .walk-text {
   width: 50%;
 }
-@media (max-width: 500px) {
+@media (max-width: 500px), (max-width: 800px) {
   .home .walk .walk-text {
     width: 100%;
     margin-top: 20px;
@@ -335,7 +335,7 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
-@media (max-width: 500px) {
+@media (max-width: 500px), (max-width: 800px) {
   .home .walk .walk-img {
     order: -1;
     width: 100%;
@@ -369,7 +369,7 @@ footer {
   transition: 0.3s;
 }
 .blog .card:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   transition-timing-function: ease-in-out;
 }
 .blog .card img {
